# video_base_system

./: __init__.py  cross_attention_2d.py  datasets.yaml  kalman_former_net.py  kalman_shift_mask.py  kalman_step.py  launch.py  patch_embedding.py  pyproject.toml  requirements.txt  rotation_embedding_2d.py  slurm.sh  spation_attention_2d.py  train.py  vision_config.py
app/: cross_attention_2d.py  gru_customized.py  kalman_former_net.py  kalman_gain_net.py  model.py  patch_embedding.py  rotation_embedding_1d.py  rotation_embedding_2d.py  spatial_temporal_attention.py  spation_attention_2d.py  temporal_shift_attn_signal.py  tokenlearner.py  train.py  utils.py  vision_temporal_attention.py
app/ddp/: utils.py
config/: augmentation.yaml  dataset_config.yaml  datasets.yaml  motion.yaml
model/: model.py
src/: __init__.py  cross_attention_2d.py  greedy.py  gru_customized.py  helper.py  kalman_former_net.py  kalman_gain_net.py  kalman_shift_mask.py  patch_embedding.py  rotation_embedding_1d.py  spatial_temporal_attention.py  spation_attention_2d.py  temporal_shift_attn_signal.py  tokenlearner.py  vision_config.py  vision_temporal_attention.py
src/dataset/: video_dataset.py
src/datasets/: data_manager.py  imagenet1k.py  video_dataset.py
src/datasets/augmentation/: motion.py  thermal_aug.py  thermal_augmentation.py
src/datasets/path_sheets/: folder_images_2.csv  images (1).csv  (+2 more)
src/loss_fn/: koopman.py  loss.py  loss_img.py  utils.py
src/masks/: multiseq_multiblock3d.py  utils.py
src/src_utils/: cluster.py  logging.py  monitoring.py  utils.py  vision_config.py
(+8 files in other folders)
